# OpenCL

./: .gitignore  README.md  array_addition.c  template_program.c
Basics/: CMakeLists.txt  template_program.c
